AnnData-Dask operations-test notebook

--- a/load-dask-anndata.ipynb
+++ b/load-dask-anndata.ipynb
@@ -30,7 +30,7 @@
     {
      "data": {
       "text/html": [
-       "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css\"/><div id=\"2f7c2993-348d-47ef-86d9-7fa5d1d660aa\" class=\"zarr-tree\"><ul><li data-jstree='{\"type\": \"File\"}' class='jstree-open'><span>/</span><ul><li data-jstree='{\"type\": \"Group\"}' class=''><span>X</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>data (2000,) float32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indices (2000,) int32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indptr (201,) int32</span></li></ul></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>obs (100,) [('index', 'O'), ('label', 'O'), ('idx²', '<i8'), ('Prime', '?')]</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>var (200,) [('index', 'O'), ('name', 'O'), ('sqrt(idx)', '<f8')]</span></li></ul></li></ul></div>\n",
+       "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css\"/><div id=\"ea0ccd2e-43e6-40d8-9a34-8b1ee4d06708\" class=\"zarr-tree\"><ul><li data-jstree='{\"type\": \"File\"}' class='jstree-open'><span>/</span><ul><li data-jstree='{\"type\": \"Group\"}' class=''><span>X</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>data (2000,) float32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indices (2000,) int32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indptr (201,) int32</span></li></ul></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>obs (100,) [('index', 'O'), ('label', 'O'), ('idx²', '<i8'), ('Prime', '?')]</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>var (200,) [('index', 'O'), ('name', 'O'), ('sqrt(idx)', '<f8')]</span></li></ul></li></ul></div>\n",
        "<script>\n",
        "    if (!require.defined('jquery')) {\n",
        "        require.config({\n",
@@ -47,7 +47,7 @@
        "        });\n",
        "    }\n",
        "    require(['jstree'], function() {\n",
-       "        $('#2f7c2993-348d-47ef-86d9-7fa5d1d660aa').jstree({\n",
+       "        $('#ea0ccd2e-43e6-40d8-9a34-8b1ee4d06708').jstree({\n",
        "            types: {\n",
        "                Group: {\n",
        "                    icon: \"fa fa-folder\"\n",
@@ -90,7 +90,7 @@
     {
      "data": {
       "text/html": [
-       "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css\"/><div id=\"26e1034a-d271-4132-8fec-f4eead5e8b76\" class=\"zarr-tree\"><ul><li data-jstree='{\"type\": \"File\"}' class='jstree-open'><span>/</span><ul><li data-jstree='{\"type\": \"Group\"}' class=''><span>X</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>data (2000,) float32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indices (2000,) int32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indptr (201,) int32</span></li></ul></li><li data-jstree='{\"type\": \"Group\"}' class=''><span>obs</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>Prime (100,) bool</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>_index (100,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>idx² (100,) int64</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>label (100,) object</span></li></ul></li><li data-jstree='{\"type\": \"Group\"}' class=''><span>var</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>_index (200,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>name (200,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>sqrt(idx) (200,) float64</span></li></ul></li></ul></li></ul></div>\n",
+       "<link rel=\"stylesheet\" href=\"//cdnjs.cloudflare.com/ajax/libs/jstree/3.3.3/themes/default/style.min.css\"/><div id=\"e270e9c4-dfee-4651-914a-d0d277b55d63\" class=\"zarr-tree\"><ul><li data-jstree='{\"type\": \"File\"}' class='jstree-open'><span>/</span><ul><li data-jstree='{\"type\": \"Group\"}' class=''><span>X</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>data (2000,) float32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indices (2000,) int32</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>indptr (201,) int32</span></li></ul></li><li data-jstree='{\"type\": \"Group\"}' class=''><span>obs</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>Prime (100,) bool</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>_index (100,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>idx² (100,) int64</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>label (100,) object</span></li></ul></li><li data-jstree='{\"type\": \"Group\"}' class=''><span>var</span><ul><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>_index (200,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>name (200,) object</span></li><li data-jstree='{\"type\": \"Dataset\"}' class=''><span>sqrt(idx) (200,) float64</span></li></ul></li></ul></li></ul></div>\n",
        "<script>\n",
        "    if (!require.defined('jquery')) {\n",
        "        require.config({\n",
@@ -107,7 +107,7 @@
        "        });\n",
        "    }\n",
        "    require(['jstree'], function() {\n",
-       "        $('#26e1034a-d271-4132-8fec-f4eead5e8b76').jstree({\n",
+       "        $('#e270e9c4-dfee-4651-914a-d0d277b55d63').jstree({\n",
        "            types: {\n",
        "                Group: {\n",
        "                    icon: \"fa fa-folder\"\n",
@@ -467,14 +467,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/ryan/c/celsius/scdb/anndata/anndata/_core/anndata.py:129: ImplicitModificationWarning: Transforming to str index.\n",
-      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -485,6 +477,14 @@
       "lazy compute X, isbacked…\n",
       "Loading HDF5 tensor: new.h5ad:/X: <HDF5 sparse dataset: format 'csc', shape (100, 200), type '<f4'>\n",
       "Opening new.h5ad (X): ((0, 1), (0, 1)) ((slice(0, 100, None), slice(0, 200, None)))\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ryan/c/celsius/scdb/anndata/anndata/_core/anndata.py:129: ImplicitModificationWarning: Transforming to str index.\n",
+      "  warnings.warn(\"Transforming to str index.\", ImplicitModificationWarning)\n"
      ]
     },
     {
@@ -507,225 +507,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from anndata._io.h5chunk import load_dataframe"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>idx²</th>\n",
-       "      <th>Prime</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>npartitions=1</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>object</td>\n",
-       "      <td>int64</td>\n",
-       "      <td>bool</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>\n",
-       "<div>Dask Name: from-delayed, 2 tasks</div>"
-      ],
-      "text/plain": [
-       "Dask DataFrame Structure:\n",
-       "                label   idx² Prime\n",
-       "npartitions=1                     \n",
-       "               object  int64  bool\n",
-       "                  ...    ...   ...\n",
-       "Dask Name: from-delayed, 2 tasks"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = load_dataframe(dataset=old_h5['obs'], index_col=lambda df: df.columns[0]); df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>idx²</th>\n",
-       "      <th>Prime</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>index</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>row 0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>row 1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>row 2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>row 3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>row 4</td>\n",
-       "      <td>16</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>row 95</td>\n",
-       "      <td>9025</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>row 96</td>\n",
-       "      <td>9216</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>row 97</td>\n",
-       "      <td>9409</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>row 98</td>\n",
-       "      <td>9604</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>row 99</td>\n",
-       "      <td>9801</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        label  idx²  Prime\n",
-       "index                     \n",
-       "0       row 0     0   True\n",
-       "1       row 1     1   True\n",
-       "2       row 2     4   True\n",
-       "3       row 3     9   True\n",
-       "4       row 4    16   True\n",
-       "...       ...   ...    ...\n",
-       "95     row 95  9025  False\n",
-       "96     row 96  9216  False\n",
-       "97     row 97  9409   True\n",
-       "98     row 98  9604  False\n",
-       "99     row 99  9801  False\n",
-       "\n",
-       "[100 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.compute()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +561,7 @@
        "dask.array<to_arr, shape=(100, 200), dtype=float32, chunksize=(100, 200), chunktype=numpy.ndarray>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +572,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "lazy compute X, isbacked…\n",
+      "Loading HDF5 tensor: new.h5ad:/X: <HDF5 sparse dataset: format 'csc', shape (100, 200), type '<f4'>\n",
+      "Opening new.h5ad (X): ((0, 1), (0, 1)) ((slice(0, 100, None), slice(0, 200, None)))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<100x200 sparse matrix of type '<class 'numpy.float32'>'\n",
+       "\twith 2000 stored elements in Compressed Sparse Column format>"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.X.compute()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><strong>Dask DataFrame Structure:</strong></div>\n",
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>idx²</th>\n",
+       "      <th>Prime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>npartitions=1</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>None</th>\n",
+       "      <td>object</td>\n",
+       "      <td>int64</td>\n",
+       "      <td>bool</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>None</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>\n",
+       "<div>Dask Name: assign_index, 5 tasks</div>"
+      ],
+      "text/plain": [
+       "Dask DataFrame Structure:\n",
+       "                label   idx² Prime\n",
+       "npartitions=1                     \n",
+       "None           object  int64  bool\n",
+       "None              ...    ...   ...\n",
+       "Dask Name: assign_index, 5 tasks"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new.obs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +685,7 @@
        "True"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -936,7 +821,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -947,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1065,7 +950,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
