more DAD-ops nb docs/discussion

--- a/AnnData Dask Operations Test.ipynb
+++ b/AnnData Dask Operations Test.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# AnnData-Dask Operations Test\n",
+    "# Dask-AnnData (DAD) Operations Test\n",
     "A collection of example operations on AnnData objects, and their constituent members, demonstrating what works and doesn't when AnnData are loaded with Dask DataFrames and Arrays.\n",
     "\n",
     "* Currently only the `X`, `obs`, and `var` members are loaded in Dask mode\n",
@@ -168,7 +168,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Basic load: `X`, `obs`, `var`"
+    "### Basic load: `X`, `obs`, `var`\n",
+    "Here we verify that `X`, `obs`, and `var` pass basic equality tests (in addition to verifying they load successfully from disk) across the 3 mods:"
    ]
   },
   {
@@ -189,7 +190,7 @@
    "metadata": {},
    "source": [
     "### `X`: integer/range slicing\n",
-    "…along either/both dimensions:"
+    "Slicing the `X` tensor directly works in all modes (along either/both dimensions):"
    ]
   },
   {
@@ -215,9 +216,11 @@
    "metadata": {},
    "source": [
     "### Arithmetic on `X`\n",
-    "`backed` mode actually fails here, because its `X` is a `SparseDataset` (lazy wrapper around a `spmatrix` backed by an HDF5 `Group`).\n",
+    "`backed` mode actually fails here:\n",
+    "- its `X` is a `SparseDataset` (a lazy wrapper around a `spmatrix` backed by an HDF5 `Group`)\n",
+    "- `SparseDataset` supports slicing, and exposes an `spmatrix` in memory via `.value`, but otherwise doesn't support direct array manipulation\n",
     "\n",
-    "`SparseDataset` supports slicing, and exposes an `spmatrix` in memory via `.value`, but otherwise doesn't support direct array manipulation."
+    "`dask` and `memory` modes work and are concordant, though:"
    ]
   },
   {
@@ -241,14 +244,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `AnnData.iloc` fails"
+    "## `AnnData` integer-index-slicing: mostly unsupported\n",
+    "Most slices on an AnnData object (which attempt to propagate row- and col- ranges to `X`/`obs`/`var`/etc., as appropriate) don't work on Dask AnnData, out of the box.\n",
+    "\n",
+    "### `DDF.iloc` not supported\n",
+    "The main difficulty is that [Dask DataFrames don't support positional indexing of rows](https://docs.dask.org/en/latest/dataframe-indexing.html#positional-indexing). Slicing integer (ranges of) rows (resp. cols) requires `.iloc`'ing `obs` (resp. `var`).\n",
+    "\n",
+    "#### Implement `DDF.iloc`?\n",
+    "`DDF.iloc` could be implemented by making 2 passes over the data:\n",
+    "- compute chunk sizes\n",
+    "- index into chunks as appropriate\n",
+    "\n",
+    "Naively, this will compute everything upstream of the DataFrame twice. Sometimes that's probably reasonable (and maybe still a better default than `raise`ing), and there are ways to optimize that (write the DF to disk, or [persist in memory](https://docs.dask.org/en/latest/api.html#dask.persist), the first time it's accessed, so that the second access will be much quicker / more efficient).\n",
+    "\n",
+    "However, it may not be worth the trouble, as integer-index slicing may not be an important enough use-case to warrant the complexity/effort.\n",
+    "\n",
+    "### Use case: `head`?\n",
+    "Slicing integer-ranges of rows from AnnData objects is probably not very common; the main use-case may be to peek at the first N rows of an AnnData. DDF's do support [`head`](https://docs.dask.org/en/latest/dataframe-api.html#dask.dataframe.DataFrame.head) for pulling the first `n` rows (and requiring they exist in the first `m` partitions).\n",
+    "\n",
+    "In any case, here are some naive \"peek\"/\"head\" examples that fail:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single row"
+    "### Integer-slicing AnnData rows\n",
+    "Example failures when integer-slicing AnnData rows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Single row\n",
+    "DDF doesn't support integer-indexing of rows:"
    ]
   },
   {
@@ -292,7 +322,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Row range"
+    "#### Row range\n",
+    "Integer-indexing a row range also fails, for the same reason:"
    ]
   },
   {
@@ -336,7 +367,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Single column"
+    "### Integer-slicing AnnData columns\n",
+    "Slicing column(s) (while selecting *all* rows) should work on DADs, in principle.\n",
+    "\n",
+    "It seems to fail due to constructuing a \"row indexer\" that represents \"all rows\" but which Dask fails to recognize as such.\n",
+    "\n",
+    "**TODO**: these should be easily fixable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Single column\n",
+    "Note the failure on `obs.iloc[oidx]`, where `oidx` should be a \"select-all\" slice. **TODO**: debug!"
    ]
   },
   {
@@ -380,7 +424,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Column range"
+    "#### Column range\n",
+    "Note the failure on `obs.iloc[oidx]`, where `oidx` should be a \"select-all\" slice. **TODO**: debug!"
    ]
   },
   {
