--- a/AnnData Dask Operations Test.ipynb
+++ b/AnnData Dask Operations Test.ipynb
@@ -13,9 +13,13 @@
     "  * `dask` mode (members are lazy Dask objects)\n",
     "  * \"memory\" mode (default, eager in-memory AnnData, made of Pandas DataFrames and Numpy ndarrays)\n",
     "\n",
-    "- [Setup](#Setup)\n",
-    "- [Basic `X` operations](#Basic,-working-operations)\n",
-    "- [`AnnData.iloc` fails](#AnnData.iloc-fails)\n",
+    "\n",
+    "\n",
+    "- [Setup](#setup)\n",
+    "- [Basic `X` operations](#basic-ops)\n",
+    "- [`AnnData` integer-indexing](#integer-indexing)\n",
+    "  - [rows](#integer-indexing-rows)\n",
+    "  - [cols](#integer-indexing-cols)\n",
     "- [`obs`](#obs)"
    ]
   },
@@ -23,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Setup"
+    "## Setup <a id=\"setup\"></a>"
    ]
   },
   {
@@ -161,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic, working operations"
+    "## Basic, working operations <a id=\"basic-ops\"></a>"
    ]
   },
   {
@@ -244,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## `AnnData` integer-index-slicing: mostly unsupported\n",
+    "## `AnnData` integer-index-slicing: mostly unsupported <a id=\"integer-indexing\"></a>\n",
     "Most slices on an AnnData object (which attempt to propagate row- and col- ranges to `X`/`obs`/`var`/etc., as appropriate) don't work on Dask AnnData, out of the box.\n",
     "\n",
     "### `DDF.iloc` not supported\n",
@@ -269,7 +273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integer-slicing AnnData rows\n",
+    "### Integer-slicing AnnData rows <a id=\"integer-indexing-rows\"></a>\n",
     "Example failures when integer-slicing AnnData rows:"
    ]
   },
@@ -367,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Integer-slicing AnnData columns\n",
+    "### Integer-slicing AnnData columns <a id=\"integer-indexing-cols\"></a>\n",
     "Slicing column(s) (while selecting *all* rows) should work on DADs, in principle.\n",
     "\n",
     "It seems to fail due to constructuing a \"row indexer\" that represents \"all rows\" but which Dask fails to recognize as such.\n",
@@ -503,9 +507,73 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>label</th>\n",
+       "      <th>idx²</th>\n",
+       "      <th>Prime</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>index</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>row 2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       label  idx²  Prime\n",
+       "index                    \n",
+       "2      row 2     4   True"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m.obs.loc['2']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Extra dimension\n",
     "Dask leaves an extra dimension in several `DDF.loc` calls (i.e. returns a 1-row DataFrame instead of a Series, or a 1-row Series instead of a scalar):"
    ]
   },
@@ -597,7 +665,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slicing multiple rows is unsupported:"
+    "#### Multiple-label slicing (requires division pre-computation?)\n",
+    "[Slicing multiple rows should work on DDFs in general](https://docs.dask.org/en/latest/dataframe-indexing.html#label-based-indexing), but doesn't work here atm (perhaps it needs some \"division\" pre-computation to be performed at DDF-creation time?)"
    ]
   },
   {
@@ -640,7 +709,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Indexing rows as integers fails normally, but succeeds in Dask mode:"
+    "#### Integer-row-indexing false-positive?\n",
+    "Indexing rows as integers fails on AnnData normally, but succeeds in Dask mode:"
    ]
   },
   {
